corpus/baselines/compiler/unusedTypeParameters2.errors.txt
unusedTypeParameters2.ts(1,15): error TS6196: 'typeparameter1' is declared but never used.
unusedTypeParameters2.ts(2,13): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.


==== unusedTypeParameters2.ts (2 errors) ====
    class greeter<typeparameter1, typeparameter2> {
                  ~~~~~~~~~~~~~~
!!! error TS6196: 'typeparameter1' is declared but never used.
        private x: typeparameter2;
                ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
    
        public function1() {
            this.x;
        }
    }